cluster/default/unsloth/svc.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/service-v1.json

apiVersion: v1
kind: Service
metadata:
  name: unsloth
spec:
  ports:
    - port: 8080
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unsloth
subsets:
  - addresses:
      - ip: 192.168.1.180
    ports:
      - port: 8080
