cluster/default/unsloth/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unsloth
spec:
  parentRefs:
    - name: internal
      namespace: agentgateway
  hostnames:
    - unsloth.sko.ai
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: unsloth
          port: 8080
          weight: 1
